z-index fix?

--- a/src/css/mobile.less
+++ b/src/css/mobile.less
@@ -11,7 +11,7 @@
     width: 100%;
     height: 120px;
     overflow: hidden;
-    z-index: 3;
+    z-index: 999;
     background: rgba(235, 235, 235, 1);
   }
 
